SDK/WolframLanguageRuntimeV1.h

/* Expression API types */

/**
	Type of an expression in the expression API
*/
typedef void* wlr_expr;
/**
	Enum for the different types of errors in the expression API
	@remarks Some expression API functions return a value of this type directly to indicate their status
	@remarks There is a sub-type of expression in the expression API called an "error expression." An error expression
   is returned when an error occurs during the execution of an expression API function that returns an expression. Every
   error expression corresponds to a single error type.
	@remarks The function wlr_ErrorType returns the error type of an error expression.
	@remarks WLR_SUCCESS is the lowest value, and WLR_RUNTIME_NOT_STARTED is the highest value. The internal
   implementation of the expression API depends on this fact.
*/
typedef enum wlr_error_type
{
	WLR_SUCCESS = 0,
	WLR_ALLOCATION_ERROR = 1,
	WLR_UNEXPECTED_TYPE = 2,
	WLR_ERROR_EXPRESSION = 3,
	WLR_MISCELLANEOUS_ERROR = 4,
	WLR_OUT_OF_BOUNDS = 5,
	WLR_SIGNING_ERROR = 6,
	WLR_UNSAFE_EXPRESSION = 7,
	WLR_MALFORMED = 8,
	WLR_RUNTIME_NOT_STARTED = 9
} wlr_err_t;
/**
	Enum for whether the runtime should prefer consuming a license, if possible, to using code signing
	@remarks The function wlr_StartRuntime takes an argument of this type. See the documentation for that function for
   more information.
*/
typedef enum wlr_license_type
{
	WLR_SIGNED_CODE_MODE = 0,
	WLR_LICENSE_OR_SIGNED_CODE_MODE = 1
} wlr_license_t;
/**
	Enum for different expression API versions
	@remarks The function wlr_StartRuntime takes an argument of this type. See the documentation for that function for
   more information.
*/
typedef enum wlr_version_type
{
	WLR_VERSION_1 = 0
} wlr_version_t;
/**
	Enum for whether the runtime should be started in a "contained" mode or not
	@remarks A member of this type is present in the wlr_runtime_conf struct, which is one of the arguments to the
   function wlr_StartRuntime. See the documentation for that function for more information.
*/
typedef enum wlr_containment_type
{
	WLR_CONTAINED = 0,
	WLR_UNCONTAINED = 1
} wlr_containment_t;
/**
	Struct containing various aspects of how a runtime can be configured
	@remarks The function wlr_StartRuntime takes an argument of this type. See the documentation for that function for
   more information.
*/
typedef struct wlr_runtime_configuration
{
	mint argumentCount;
	char** arguments;
	wlr_containment_t containmentSetting;
} wlr_runtime_conf;
WLR_ATTRIBUTE wlr_expr wlr_Eval(wlr_expr expression);
WLR_ATTRIBUTE void wlr_CreateExpressionPool(void);
WLR_ATTRIBUTE void wlr_ReleaseExpressionPool(void);
WLR_ATTRIBUTE void wlr_ReleaseExpression(wlr_expr detachedExpression);
WLR_ATTRIBUTE void wlr_Release(void* data);
WLR_ATTRIBUTE wlr_expr wlr_Symbol(const char* symbolName);
WLR_ATTRIBUTE wlr_expr wlr_String(const char* string);
WLR_ATTRIBUTE wlr_err_t wlr_StringData(wlr_expr expression, char** resultData, mint* resultLength);
WLR_ATTRIBUTE wlr_expr wlr_ParseExpression(wlr_expr inputString);
/* Expression API variadic function machinery */

WLR_ATTRIBUTE wlr_expr wlr_VariadicE(void* expressionHead, mint childElementNumber, ...);